--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div id="container">
         <h1>Yakut Ahmedin Landing Page</h1>
         <h2>WEB 231 Enterprise JavaScript I</h2>
-        <hr />
+        <hr>
 
+        <!-- Weekly assignment  -->
         <h3>Weekly Assignments.</h3>
         <ul>
             <li>Exeecise 2.2</li>
@@ -35,6 +36,7 @@
             <li>bioSite Project Home Page</li>
         </ul>
 
+        <!-- project helper links -->
         <h4>Important Links.</h4>
         <ul>
             <li><a href="https://validator.w3.org/">W3C HTML Validator</a></li>
