--- a/week-1/index.html
+++ b/week-1/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>WEB 200 Fundamentals of Web Development</title>
-
+    
+    <!-- CSS styel -->
     <link rel="stylesheet" type="text/css" href="site.css">
 
     <!-- Google fonts for Oswald -->
