Exercise 2.2 – Hello JavaScript

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>WEB 200 Fundamentals of Web Development</title>
 
-    <link rel="stylesheet" type="text/css" href="site.css">
+    <link rel="stylesheet" type="text/css" href="global.css">
 
     <!-- Google fonts for Oswald -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -20,14 +20,14 @@
         <!-- Weekly assignment  -->
         <h3>Weekly Assignments.</h3>
         <ul>
-            <li>Exeecise 2.2</li>
-            <li>Assignment 2.3</li>
-            <li>Assignment 3.2</li>
-            <li>Assignment 4.2</li>
-            <li>Assignment 5.2</li>
-            <li>Assignment 6.2</li>
-            <li>Assignment 7.2</li>
-            <li>Assignment 8.2</li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise2"> Exeecise 2.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise2"> Assignment 2.3 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise3"> Assignment 3.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise4"> Assignment 4.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise5"> Assignment 5.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise6"> Assignment 6.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise7"> Assignment 7.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise8"> Assignment 8.2 </a></li>
         </ul>
 
         <h3>Projects.</h3>
