--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--
+============================================
+; Title:  Excercise 1.2 - Hello JavaScript
+; Author: Professor Krasso
+; Date:   21 October 2022
+; Modified By: Yakut Ahmedin
+; Description: Exercise 1.2 – WEB 231 Enterprise JavaScript I
+;===========================================
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +14,7 @@
     <meta charset="UTF-8">
     <title>WEB 200 Fundamentals of Web Development</title>
 
-    <link rel="stylesheet" type="text/css" href="global.css">
+    <link rel="stylesheet" type="text/css" href="site.css">
 
     <!-- Google fonts for Oswald -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
