redirecting to home page link added

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <h3>Weekly Assignments.</h3>
         <ul>
             <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise2"> Exeecise 2.2 </a></li>
-            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise2"> Assignment 2.3 </a></li>
-            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise3"> Assignment 3.2 </a></li>
-            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise4"> Assignment 4.2 </a></li>
-            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise5"> Assignment 5.2 </a></li>
-            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise6"> Assignment 6.2 </a></li>
-            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise7"> Assignment 7.2 </a></li>
-            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise8"> Assignment 8.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-payroll"> Assignment 2.3 </a></li>
+            <li><a href="#"> Assignment 3.2 </a></li>
+            <li><a href="#"> Assignment 4.2 </a></li>
+            <li><a href="#"> Assignment 5.2 </a></li>
+            <li><a href="#"> Assignment 6.2 </a></li>
+            <li><a href="#"> Assignment 7.2 </a></li>
+            <li><a href="#"> Assignment 8.2 </a></li>
         </ul>
 
         <h3>Projects.</h3>
