--- a/week-2/ahmedin-exercise2.html
+++ b/week-2/ahmedin-exercise2.html
@@ -35,7 +35,7 @@
         <p id="txtMyWorld">You are now in Ahmedin world!” </p>
 
         <!-- Return back to home page -->
-        <a href="#container" class="return-home">Return</a>
+        <a href="https://yakutmuder9.github.io/web-231/index" class="return-home">Return</a>
     </div>
 
 </body>
