ass returning links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
             <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-exercise2"> Exeecise 2.2 </a></li>
             <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-payroll"> Assignment 2.3 </a></li>
-            <li><a href="#"> Assignment 3.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-3/ahmedin-temp-conversion"> Assignment 3.2 </a></li>
             <li><a href="#"> Assignment 4.2 </a></li>
             <li><a href="#"> Assignment 5.2 </a></li>
             <li><a href="#"> Assignment 6.2 </a></li>
