--- a/week-3/ahmedin-temp-conversion.html
+++ b/week-3/ahmedin-temp-conversion.html
@@ -64,7 +64,7 @@
 
         <footer>
             <!-- return to home page -->
-            <a href="#container">Return</a>
+            <a href="https://yakutmuder9.github.io/web-231/week-3/ahmedin-temp-conversion">Return</a>
         </footer>
     </div>
 
