--- a/week-3/ahmedin-temp-conversion.html
+++ b/week-3/ahmedin-temp-conversion.html
@@ -4,7 +4,7 @@
 ; Author: Professor Krasso
 ; Date:   03 November 2022
 ; Modified By: Yakut Ahmedin
-; Description: Assignment 3 – Temperature Conversion App 
+; Description: The following program contains the source code for a     Temperature Conversion App. For the player put fahrenite in to input field and they will get celicuse in to the next card. 
             Weekly Assignments 3 word document!!
             Fahrenheit to Celsuis Converter!!
 ;===========================================
@@ -76,7 +76,7 @@
         // change the input value funtion
         document.getElementById('formSubmitBtn').addEventListener("click", function () {
 
-            // let assign varible and change the input value to celisus  also round in to two decimal places.
+            // here we assign varible and change the input value to celisus  also round in to two decimal places.
             let tempValue = ((parseFloat(fahrenheit.value) - 32) / 1.8).toFixed(2)
 
             // get the changed value from tempValue and set it on to conversion field
