week-4 assignment commit

--- a/week-4/ahmedin-number-game.html
+++ b/week-4/ahmedin-number-game.html
@@ -64,7 +64,7 @@
 
         <footer>
             <!-- return to home page -->
-            <a href="https://yakutmuder9.github.io/web-231/week-4/ahmedin-number-game">Return</a>
+            <a href="https://yakutmuder9.github.io/web-231">Return</a>
         </footer>
     </div>
 
