--- a/week-4/ahmedin-number-game.html
+++ b/week-4/ahmedin-number-game.html
@@ -1,12 +1,12 @@
 <!--
 ============================================
-; Title:  Assignment 3 – Temperature Conversion App
+; Title:  Assignment 3 – Number Guessing Game App
 ; Author: Professor Krasso
-; Date:   03 November 2022
+; Date:   13 November 2022
 ; Modified By: Yakut Ahmedin
-; Description: The following program contains the source code for a     Temperature Conversion App. For the player put fahrenite in to input field and they will get celicuse in to the next card. 
-            Weekly Assignments 3 word document!!
-            Fahrenheit to Celsuis Converter!!
+; Description: The following program contains the source code for a Number Guessing Game App. For the player put randome number from 1 up to 10 to guss the number. It checks if the number macth the hidden number. 
+            Weekly Assignments 4 word document!!
+            Number Guessing Game!!
 ;===========================================
 -->
 <!DOCTYPE html>
@@ -34,7 +34,7 @@
                 Pick a number between 1 and 10
             </div>
 
-            <!--  fahrenheit value insertion form -->
+            <!--  value insertion form -->
             <div class="card-content">
                 <div class="form">
                     <div class="form-field">
