--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <li><a href="https://yakutmuder9.github.io/web-231/week-2/ahmedin-payroll"> Assignment 2.3 </a></li>
             <li><a href="https://yakutmuder9.github.io/web-231/week-3/ahmedin-temp-conversion"> Assignment 3.2 </a></li>
             <li><a href="https://yakutmuder9.github.io/web-231/week-4/ahmedin-number-game"> Assignment 4.2 </a></li>
-            <li><a href="#"> Assignment 5.2 </a></li>
-            <li><a href="#"> Assignment 6.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-5/ahmedin-sequence-game"> Assignment 5.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-4/ahmedin-in-n-out-books"> Assignment 6.2 </a></li>
             <li><a href="#"> Assignment 7.2 </a></li>
             <li><a href="#"> Assignment 8.2 </a></li>
         </ul>
