--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="https://yakutmuder9.github.io/web-231/week-6/ahmedin-in-n-out-books"> Assignment 6.2 </a></li>
             <li><a href="https://yakutmuder9.github.io/web-231/week-7/ahmedin-javazon"> Assignment 7.2 </a></li>
             <li><a href="https://yakutmuder9.github.io/web-231/week-8/ahmedin-alphabet-game"> Assignment 8.2 </a></li>
+            <li><a href="https://yakutmuder9.github.io/web-231/week-9/ahmedin-card-game"> Assignment 9.2 </a></li>
         </ul>
 
         <h3>Projects.</h3>
