--- a/week-9/ahmedin-card-game.html
+++ b/week-9/ahmedin-card-game.html
@@ -115,19 +115,6 @@
             }
         }
 
-
-        function buildPlayingCard(card, suitIcon, faceColor, suitColor) {
-            return `<div class="card player-card" >
-                <div class="card-title" style="text-align:left;font-size: 20px;padding-left: 10px;color:${faceColor};">
-                    ${card.Face}
-                </div>
-                <div class="card-content" style="font-size:28px;padding-bottom:28px;">
-                        <span class="${card.Suit}" style="color: ${suitColor}"}>
-                        </span>
-                    </div>
-            </div>`
-        }
-
         document.getElementById("btnDealCards").onclick = function () {
             // call shuffle to randomize the card when butuun clicked
             shuffle();
@@ -157,7 +144,7 @@
             }
 
             // map cardOutputWithIcon array and create player-card card.
-            let listItems = cardOutputWithIcon.map(function (prop) {
+            let buildPlayingCard = cardOutputWithIcon.map(function (prop) {
                 // distructure the property getting from cardOutputWithIcon array
                 const [face, suitIcon, faceColor, suitColor] = prop
 
@@ -174,7 +161,7 @@
             })
 
             // get the player card and bind to the player-card-container div.
-            document.getElementById('player-card-container').innerHTML = listItems.join('');
+            document.getElementById('player-card-container').innerHTML = buildPlayingCard.join('');
         }
 
     </script>
